// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Route/> should render a NotFound route 1`] = `
<div
  className="not-found"
>
  not found
</div>
`;

exports[`<Route/> should render components that match a route 1`] = `
<div
  classNam="found"
>
  found
</div>
`;

exports[`<Route/> should render the right component when using a root component 1`] = `null`;
